<resources>
    <string name="app_name">Islamic Lovers</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="button1">ا</string>
    <string name="button2">ب</string>
    <string name="button3">ت</string>
    <string name="button4">ث</string>
    <string name="button5">ج</string>
    <string name="button6">ح</string>
    <string name="button7">خ</string>
    <string name="button8">د</string>
    <string name="button9">ذ</string>
    <string name="button10">ر</string>
    <string name="button11">ز</string>
    <string name="button12">س</string>
    <string name="button13">ش</string>
    <string name="button14">ص</string>
    <string name="button15">ض</string>
    <string name="button16">ط</string>
    <string name="button17">ظ</string>
    <string name="button18">ع</string>
    <string name="button19">غ</string>
    <string name="button20">ف</string>
    <string name="button21">ق</string>
    <string name="button22">ک</string>
    <string name="button23">ل</string>
    <string name="button24">م</string>
    <string name="button25">ن</string>
    <string name="button26">و</string>
    <string name="button27">ہ</string>
    <string name="button28">ئ</string>
    <string name="button29">ی</string>
    <string name="button30">ے</string>
    <string name="button01">أَ</string>
    <string name="button02">أِ</string>
    <string name="button03">أُ</string>
    <string name="button04">ہَ</string>
    <string name="button05">ہِ</string>
    <string name="button06">ہُ</string>
    <string name="button07">عَ</string>
    <string name="button08">عِ</string>
    <string name="button09">عُ</string>
    <string name="button010">حَ</string>
    <string name="button011">حِ</string>
    <string name="button012">حُ</string>
    <string name="button013">غَ</string>
    <string name="button014">غِ</string>
    <string name="button015">غُ</string>
    <string name="button016">خَ</string>
    <string name="button017">خِ</string>
    <string name="button018">خُ</string>
    <string name="button019">قَ</string>
    <string name="button020">قِ</string>
    <string name="button021">قُ</string>
    <string name="button022">کَ</string>
    <string name="button023">کِ</string>
    <string name="button024">کُ</string>
    <string name="button025">جَ</string>
    <string name="button026">جِ</string>
    <string name="button027">جُ</string>
    <string name="button028">شَ</string>
    <string name="button029">شِ</string>
    <string name="button030">شُ</string>
    <string name="button31">یَ</string>
    <string name="button32">یِ</string>
    <string name="button33">یُ</string>
    <string name="button34">ضَ</string>
    <string name="button35">ضِ</string>
    <string name="button36">ضُ</string>
    <string name="button37">لَ</string>
    <string name="button38">لِ</string>
    <string name="button39">لُ</string>
    <string name="button40">نَ</string>
    <string name="button41">نِ</string>
    <string name="button42">نُ</string>
    <string name="button43">رَ</string>
    <string name="button44">رِ</string>
    <string name="button45">رُ</string>
    <string name="button46">طَ</string>
    <string name="button47">طِ</string>
    <string name="button48">طُ</string>
    <string name="button49">دَ</string>
    <string name="button50">دِ</string>
    <string name="button51">دُ</string>
    <string name="button52">تَ</string>
    <string name="button53">تِ</string>
    <string name="button54">تُ</string>
    <string name="button55">صَ</string>
    <string name="button56">صِ</string>
    <string name="button57">صُ</string>
    <string name="button58">سَ</string>
    <string name="button59">سِ</string>
    <string name="button60">سُ</string>
    <string name="buttont1">مٌ</string>
    <string name="buttont2">مٍ</string>
    <string name="buttont3">مً</string>
    <string name="buttont4">بٌ</string>
    <string name="buttont5">بٍ</string>
    <string name="buttont6">بً</string>
    <string name="buttont7">وٌ</string>
    <string name="buttont8">وٍ</string>
    <string name="buttont9">وًا</string>
    <string name="buttont10">فٌ</string>
    <string name="buttont11">فٍ</string>
    <string name="buttont12">فاً</string>
    <string name="buttont13">ثٌ</string>
    <string name="buttont14">ثٍ</string>
    <string name="buttont15">ثاً</string>
    <string name="buttont16">ذٌ</string>
    <string name="buttont17">ذٍ</string>
    <string name="buttont18">ذًی</string>
    <string name="buttont19">ظٌ</string>
    <string name="buttont20">ظٍ</string>
    <string name="buttont21">ظاً</string>
    <string name="buttont22">زٌ</string>
    <string name="buttont23">زٍ</string>
    <string name="buttont24">زًا</string>
    <string name="buttont25">سٌ</string>
    <string name="buttont26">سٍ</string>
    <string name="buttont27">ساً</string>
    <string name="buttont28">صٌ</string>
    <string name="buttont29">صٍ</string>
    <string name="buttont30">صاً</string>
    <string name="textbox1">أَلَمْ تَرَ كَيْفَ فَعَلَ رَبُّكَ بِأَصْحَابِ الْفِيل </string>
    <string name="textbox01"> کیا تم نے نہیں دیکھا کہ تمہارے پروردگار نے ہاتھی والوں کے ساتھ کیا کیا</string>
    <string name="textbox2">أَلَمْ يَجْعَلْ كَيْدَهُمْ فِي تَضْلِيلٍ </string>
    <string name="textbox02">کیا ان کا داؤں غلط نہیں کیا؟ (گیا)</string>
    <string name="textbox3">وَأَرْسَلَ عَلَيْهِمْ طَيْرًا أَبَابِيلَ </string>
    <string name="textbox03">اور ان پر جھلڑ کے جھلڑ جانور بھیج</string>
    <string name="textbox4">تَرْمِيهِم بِحِجَارَةٍ مِّن سِجِّيل </string>
    <string name="textbox04">جو ان پر کھنگر کی پتھریاں پھینکتے تھے</string>
    <string name="textbox5">فَجَعَلَهُمْ كَعَصْفٍ مَّأْكُول</string>
    <string name="textbox05"> تو ان کو ایسا کر دیا جیسے کھایا ہوا بھس</string>



    <string name="gps_settings_title">GPS settings</string>
    <string name="gps_settings_text">GPS is not enabled. Do you want to go to settings menu?</string>
    <string name="settings_button_ok">Settings</string>
    <string name="settings_button_cancel">Cancel</string>
    <string name="toast_permission_required">This app requires Access Location</string>


    <!-- Prayer time names -->
    <string name="fajr">Fajr</string>
    <string name="dhuhr">Dhuhr</string>
    <string name="asr">Asr</string>
    <string name="maghrib">Maghrib</string>
    <string name="isha">Isha</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>


</resources>

