<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">


            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_marginLeft="30dp"
                android:layout_weight="1"
                android:background="@drawable/haroof_03"
                android:text="@string/buttont1"
                android:textColor="#35E70D"
                android:textSize="44dp" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_marginLeft="30dp"
                android:layout_weight="1"
                android:background="@drawable/haroof_02"
                android:text="@string/buttont2"
                android:textColor="#EE1919"
                android:textSize="44dp" />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_weight="1"
                android:background="@drawable/haroof_1"
                android:text="@string/buttont3"
                android:textSize="44dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_marginLeft="30dp"
                android:layout_weight="1"
                android:background="@drawable/haroof_06"
                android:text="@string/buttont4"
                android:textColor="#E91EBD"
                android:textSize="44dp" />

            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_marginLeft="30dp"
                android:layout_weight="1"
                android:background="@drawable/haroof_05"
                android:text="@string/buttont5"
                android:textColor="#449EC7"
                android:textSize="44dp" />

            <Button
                android:id="@+id/button6"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_weight="1"
                android:background="@drawable/haroof_04"
                android:text="@string/buttont6"
                android:textSize="44dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button7"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_marginLeft="30dp"
                android:layout_weight="1"
                android:background="@drawable/haroof_02"
                android:text="@string/buttont7"
                android:textSize="44dp" />

            <Button
                android:id="@+id/button8"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_marginLeft="30dp"
                android:layout_weight="1"
                android:background="@drawable/haroof_1"
                android:text="@string/buttont8"
                android:textColor="#12E41B"
                android:textSize="44dp" />

            <Button
                android:id="@+id/button9"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_weight="1"
                android:background="@drawable/haroof_07"
                android:text="@string/buttont9"
                android:textColor="#B89018"
                android:textSize="44dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button10"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_marginLeft="30dp"
                android:layout_weight="1"
                android:background="@drawable/haroof_05"
                android:text="@string/buttont10"
                android:textColor="#F06336"
                android:textSize="44dp" />

            <Button
                android:id="@+id/button11"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_marginLeft="30dp"
                android:layout_weight="1"
                android:background="@drawable/haroof_04"
                android:text="@string/buttont11"
                android:textColor="#7A44DB"
                android:textSize="44dp" />

            <Button
                android:id="@+id/button12"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_weight="1"
                android:background="@drawable/haroof_03"
                android:text="@string/buttont12"
                android:textSize="44dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button13"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_marginLeft="30dp"
                android:layout_weight="1"
                android:background="@drawable/haroof_1"
                android:text="@string/buttont13"
                android:textColor="#E71616"
                android:textSize="44dp" />

            <Button
                android:id="@+id/button14"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_marginLeft="30dp"
                android:layout_weight="1"
                android:background="@drawable/haroof_07"
                android:text="@string/buttont14"
                android:textColor="#0FA3B6"
                android:textSize="44dp" />

            <Button
                android:id="@+id/button15"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_weight="1"
                android:background="@drawable/haroof_06"
                android:text="@string/buttont15"
                android:textSize="44dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button16"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_marginLeft="30dp"
                android:layout_weight="1"
                android:background="@drawable/haroof_04"
                android:text="@string/buttont16"
                android:textColor="#E2982A"
                android:textSize="44dp" />

            <Button
                android:id="@+id/button17"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_marginLeft="30dp"
                android:layout_weight="1"
                android:background="@drawable/haroof_03"
                android:text="@string/buttont17"
                android:textSize="44dp" />

            <Button
                android:id="@+id/button18"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_weight="1"
                android:background="@drawable/haroof_02"
                android:text="@string/buttont18"
                android:textColor="#EC5C8D"
                android:textSize="44dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button19"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_marginLeft="30dp"
                android:layout_weight="1"
                android:background="@drawable/haroof_07"
                android:text="@string/buttont19"
                android:textColor="#FA594D"
                android:textSize="44dp" />

            <Button
                android:id="@+id/button20"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_marginLeft="30dp"
                android:layout_weight="1"
                android:background="@drawable/haroof_06"
                android:text="@string/buttont20"
                android:textColor="#6C20F3"
                android:textSize="44dp" />

            <Button
                android:id="@+id/button21"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_weight="1"
                android:background="@drawable/haroof_05"
                android:text="@string/buttont21"
                android:textColor="#10F718"
                android:textSize="44dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button22"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_marginLeft="30dp"
                android:layout_weight="1"
                android:background="@drawable/haroof_03"
                android:text="@string/buttont22"
                android:textColor="#129185"
                android:textSize="44dp" />

            <Button
                android:id="@+id/button23"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_marginLeft="30dp"
                android:layout_weight="1"
                android:background="@drawable/haroof_02"
                android:text="@string/buttont23"
                android:textSize="44dp" />

            <Button
                android:id="@+id/button24"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_weight="1"
                android:background="@drawable/haroof_1"
                android:text="@string/buttont24"
                android:textColor="#E6B525"
                android:textSize="44dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button25"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_marginLeft="30dp"
                android:layout_weight="1"
                android:background="@drawable/haroof_05"
                android:text="@string/buttont25"
                android:textSize="44dp" />

            <Button
                android:id="@+id/button26"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_marginLeft="30dp"
                android:layout_weight="1"
                android:background="@drawable/haroof_04"
                android:text="@string/buttont26"
                android:textColor="#F50A0A"
                android:textSize="44dp" />

            <Button
                android:id="@+id/button27"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_weight="1"
                android:background="@drawable/haroof_03"
                android:text="@string/buttont27"
                android:textColor="#CE20EC"
                android:textSize="44dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button28"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_marginLeft="30dp"
                android:layout_weight="1"
                android:background="@drawable/haroof_03"
                android:text="@string/buttont28"
                android:textColor="#1393F8"
                android:textSize="44dp" />

            <Button
                android:id="@+id/button29"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_marginLeft="30dp"
                android:layout_weight="1"
                android:background="@drawable/haroof_07"
                android:text="@string/buttont29"
                android:textSize="44dp" />

            <Button
                android:id="@+id/button30"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_weight="1"
                android:background="@drawable/haroof_06"
                android:text="@string/buttont30"
                android:textColor="#B2C216"
                android:textSize="44dp" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>



