<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/surah_styling"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@drawable/nurani_qaida_styling"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="25dp"
                    android:text="@string/textbox1"
                    android:textColor="#000000"
                    android:textSize="26dp" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginRight="25dp"
                    android:text="@string/textbox01"
                    android:textColor="#000000"
                    android:textSize="16dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/nurani_qaida_styling"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="25dp"
                    android:text="@string/textbox2"
                    android:textColor="#000000"
                    android:textSize="26dp" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginRight="25dp"
                    android:text="@string/textbox02"
                    android:textColor="#000000"
                    android:textSize="16dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/nurani_qaida_styling"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="25dp"
                    android:text="@string/textbox3"
                    android:textColor="#000000"
                    android:textSize="26dp" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginRight="25dp"
                    android:text="@string/textbox03"
                    android:textColor="#000000"
                    android:textSize="16dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/nurani_qaida_styling"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="25dp"
                    android:text="@string/textbox4"
                    android:textColor="#000000"
                    android:textSize="26dp" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginRight="25dp"
                    android:text="@string/textbox04"
                    android:textColor="#000000"
                    android:textSize="16dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/nurani_qaida_styling"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="25dp"
                    android:text="@string/textbox5"
                    android:textColor="#000000"
                    android:textSize="26dp" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginRight="25dp"
                    android:text="@string/textbox05"
                    android:textColor="#000000"
                    android:textSize="16dp" />
            </LinearLayout>
            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                app:srcCompat="@drawable/playy1" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>